--- a/backend/views/expenses/list.ejs
+++ b/backend/views/expenses/list.ejs
@@ -15,12 +15,19 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="card mb-4">
-        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+        <div
+          class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
+        >
           <h6 class="m-0 font-weight-bold text-primary">Expense List</h6>
-          <a href="banner/add"><button type="button" class="btn btn-primary mb-1">Add</button></a>
+          <a href="/admin/expense/addEdit"
+            ><button type="button" class="btn btn-primary mb-1">Add</button></a
+          >
         </div>
         <div class="table-responsive p-3">
-          <table class="table align-items-center table-flush table-hover" id="dataTableHover">
+          <table
+            class="table align-items-center table-flush table-hover"
+            id="dataTableHover"
+          >
             <thead class="thead-light">
               <tr>
                 <th>Date</th>
@@ -28,6 +35,7 @@
                 <th>Image</th>
                 <th>Price</th>
                 <th>Quantity</th>
+                <th>Created/Updated By</th>
                 <th>Action</th>
               </tr>
             </thead>
@@ -37,15 +45,28 @@
               <tr>
                 <td><%= item.createdAt.toLocaleDateString() %></td>
                 <td><%= item.productName %></td>
-                <td><img src="<%= item.image %>" height="50px"></td>
+                <td><img src="<%= item.image %>" height="50px" /></td>
                 <td><%= item.productPrice %></td>
                 <td><%= item.productQuantity %></td>
-                <td class="text-center" style="display: flex; gap: 0.5rem; align-items: center">
-                  <a href="" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></a>
-                  <a href="" class="btn btn-danger" onclick="return(confirm('Are you sure to delete? '))"><i class="fa-solid fa-trash-can"></i></a>
+                <td><%= item.member %></td>
+                <td
+                  class="text-center"
+                  style="display: flex; gap: 0.5rem; align-items: center"
+                >
+                  <a
+                    href="/admin/expense/edit/<%=item?._id %>"
+                    class="btn btn-primary"
+                    ><i class="fa-solid fa-pen-to-square"></i
+                  ></a>
+                  <a
+                    href="/admin/expense/delete/<%=item?._id %>"
+                    class="btn btn-danger"
+                    onclick="return(confirm('Are you sure to delete? '))"
+                    ><i class="fa-solid fa-trash-can"></i
+                  ></a>
                 </td>
               </tr>
-              <%  }) %> 
+              <% }) %>
             </tbody>
           </table>
         </div>
