--- a/backend/views/members/list.ejs
+++ b/backend/views/members/list.ejs
@@ -4,7 +4,7 @@
 <br />
 <div class="container-fluid" id="container-wrapper">
   <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Expenses</h1>
+    <h1 class="h3 mb-0 text-gray-800">Members</h1>
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="/">Home</a></li>
       <li class="breadcrumb-item">List</li>
@@ -18,8 +18,8 @@
         <div
           class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
         >
-          <h6 class="m-0 font-weight-bold text-primary">Expense List</h6>
-          <a href="/admin/expense/addPage"
+          <h6 class="m-0 font-weight-bold text-primary">Member List</h6>
+          <a href="/admin/member/addPage"
             ><button type="button" class="btn btn-primary mb-1">Add</button></a
           >
         </div>
@@ -30,12 +30,9 @@
           >
             <thead class="thead-light">
               <tr>
-                <th>Date</th>
-                <th>Product Name</th>
+                <th>Name</th>
                 <th>Image</th>
-                <th>Price</th>
-                <th>Quantity</th>
-                <th>Created/Updated By</th>
+                <th>Position</th>
                 <th>Action</th>
               </tr>
             </thead>
@@ -43,23 +40,20 @@
             <tbody>
               <% result.forEach((item)=>{ %>
               <tr>
-                <td><%= item?.createdAt.toLocaleDateString() %></td>
-                <td><%= item?.productName %></td>
-                <td><img src="<%= item?.image %>" height="50px" /></td>
-                <td><%= item?.productPrice %></td>
-                <td><%= item?.productQuantity %></td>
-                <td><%= item?.member?.name %></td>
+                <td><%= item?.name %></td>
+                <td><img src="<%= item.image %>" height="50px" /></td>
+                <td><%= item?.position %></td>
                 <td
                   class="text-center"
                   style="display: flex; gap: 0.5rem; align-items: center"
                 >
                   <a
-                    href="/admin/expense/edit/<%=item?._id %>"
+                    href="/admin/member/edit/<%=item?._id %>"
                     class="btn btn-primary"
                     ><i class="fa-solid fa-pen-to-square"></i
                   ></a>
                   <a
-                    href="/admin/expense/delete/<%=item?._id %>"
+                    href="/admin/member/delete/<%=item?._id %>"
                     class="btn btn-danger"
                     onclick="return(confirm('Are you sure to delete? '))"
                     ><i class="fa-solid fa-trash-can"></i
